[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga/SpriteEstacion.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga/audio_sin_energia.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga/audio_recarga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estaciones/EstacionRecarga/EstacionRecarga.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.2474
height = 123.077

[sub_resource type="Animation" id=2]
resource_name = "activado"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.223529, 0.960784, 0.603922, 0.105882 ), Color( 0.223529, 0.960784, 0.603922, 0.0470588 ), Color( 0.223529, 0.960784, 0.603922, 0.105882 ), Color( 0.223529, 0.960784, 0.603922, 0.0470588 ), Color( 0.223529, 0.960784, 0.603922, 0.105882 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/SpriteZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.25, 2.5, 3.75, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 33.1086, 33.1086 ), Vector2( 25.109, 25.109 ), Vector2( 33.1086, 33.1086 ), Vector2( 25.109, 25.109 ), Vector2( 33.1086, 33.1086 ) ]
}

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
script = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 25

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="AreaRecarga" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 2 )

[node name="VacioSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
